Works… kinda. Keyboard issues??

--- a/calculator/Base.lproj/Main.storyboard
+++ b/calculator/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                 </segments>
                                 <color key="tintColor" red="0.80595868825912476" green="0.74377244710922241" blue="0.94106072187423706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <action selector="newCalculateTip:" destination="BYZ-38-t0r" eventType="valueChanged" id="eG0-IP-n2Y"/>
+                                    <action selector="newCalculateTip:" destination="BYZ-38-t0r" eventType="valueChanged" id="wU6-Vx-o5s"/>
                                 </connections>
                             </segmentedControl>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" text="Bill Total" textAlignment="right" clearsOnBeginEditing="YES" adjustsFontSizeToFit="NO" minimumFontSize="50" translatesAutoresizingMaskIntoConstraints="NO" id="fab-NM-5vg">
@@ -70,6 +70,9 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="50"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                <connections>
+                                    <action selector="newCalculateTip:" destination="BYZ-38-t0r" eventType="editingChanged" id="Ltn-ec-aPH"/>
+                                </connections>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.13618773221969604" green="0.041974067687988281" blue="0.17204627394676208" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -80,8 +83,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="Tip Jar" id="Ab5-Yb-NtU"/>
                     <connections>
-                        <outlet property="billField" destination="fab-NM-5vg" id="Ivz-pp-3Fh"/>
-                        <outlet property="tipControl" destination="dyc-dB-wht" id="Bka-6B-rTU"/>
+                        <outlet property="billField" destination="fab-NM-5vg" id="zZ4-Oq-swL"/>
+                        <outlet property="tipControl" destination="dyc-dB-wht" id="r2t-ZE-vCF"/>
                         <outlet property="tipLabel" destination="Xub-V4-taG" id="DHB-NS-kaI"/>
                         <outlet property="totalsLabel" destination="Rph-eb-Lk7" id="MfX-fb-5o7"/>
                     </connections>
